01-prereqs/01-ldap/01-yaml/02-verify-ui/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: verify-ui
spec:
  type: ClusterIP
  ports:
  - name: verify-ui
    port: 9080
    protocol: TCP
    targetPort: 9080
  selector:
    app: verify-ui
