01-prereqs/01-ldap/01-yaml/02-verify-ui/03-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: verify-ui
spec:
  to:
    name: verify-ui
    kind: Service
    weight: 100
  port:
    targetPort: verify-ui
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
